--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react-scripts": "^3.4.0",
     "express": "^4.17.1",
     "concurrently": "^5.0.2",
-    "http-proxy-middleware": "^1.0.0"
+    "http-proxy-middleware": "^1.0.0",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0"
   },
   "scripts": {
     "start": "npm run development",
