🐢😅 Checkpoint ./src/App.css:35575323/17 ./src/App.js:35575323/32 ./package.json:35575323/2227

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "concurrently": "^5.0.2",
     "http-proxy-middleware": "^1.0.0",
     "socket.io": "^4.2.0",
-    "socket.io-client": "^4.2.0"
+    "socket.io-client": "^4.2.0",
+    "phaser": "^3.55.2"
   },
   "scripts": {
     "start": "npm run development",
