--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "http-proxy-middleware": "^1.0.0",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0",
-    "phaser": "^3.55.2"
+    "wouter": "^2.7.4"
   },
   "scripts": {
     "start": "npm run development",
