--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "http-proxy-middleware": "^2.0.1",
     "socket.io": "^4.3.1",
     "socket.io-client": "^4.3.2",
-    "wouter": "^2.7.4"
+    "wouter": "^2.7.4",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "npm run development",
